--- a/T1/t1/pom.xml
+++ b/T1/t1/pom.xml
@@ -38,7 +38,7 @@
          <plugin>
              <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
-               <version>4.12.0</version>
+               <version>4.11.1</version>
                <executions>
                    <execution>
                        <id>antlr</id>
@@ -53,7 +53,7 @@
                <configuration>
                    <archive>
                        <manifest>
-                           <mainClass>br.ufscar.dc.compiladores.alguma.lexico.Principal</mainClass>
+                           <mainClass>br.ufscar.dc.compiladores.t1.Principal</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
